# pipe-run

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  config.example.json  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
docs/plans/: 20260517-qa-pipe-open-source.md
src/app/: main.py
src/app/auth/: deps.py  middleware.py
src/app/conf/: __init__.py  config_loader.py  config_model.py  logging.py
src/app/db/: base.py  models.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 0001_initial.py
src/app/features/gitlab/: router.py
src/app/features/pipelines/: allure_report.py  api.py  crud.py  gitlab.py  models.py  schemas.py
src/app/features/projects/: router.py  schemas.py
src/app/static/css/: style.css
src/app/static/js/: app.js  auth.js
src/app/templates/: index.html
tests/: conftest.py  test_allure_report.py  test_api_gitlab.py  test_api_pipelines.py  test_api_projects.py  test_auth.py  test_config.py  test_crud.py  test_db.py  test_gitlab_client.py
